--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/svg+xml" href="/pics/image (2).jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>andrew portfolio1</title>
@@ -22,6 +23,6 @@
        <button id =up><a href="#">hire me</a></button> 
     </section>
            
-        <img src="pics/image (2).jpg">
+        <img class="img" src="pics/image (2).jpg">
 </body>
 </html>
